# cardtrader-watcher

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: api.rs  config.rs  email.rs  main.rs  utils.rs  watcher.rs
