[package]
name = "cardtrader-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0", features = [
    "tokio1",
    "tokio1-native-tls",
    "smtp-transport",
    "serde",
] }
